src/style.scss
$color-inactive: white;
$color-inactive-hover: darken($color-inactive, 30%);
$color-active: grey;
$color-active-hover: darken($color-active, 30%);

$color-light: #FF17CD;
$color-medium: #BF119A;
$color-dark: #400633;
$color-modal-background: rgba(black, 0.85);

html {
    font-size: 100%;
    font: inherit;
    font-family: 'Raleway', sans-serif;
    vertical-align: baseline;
}

* {
    margin: 0;
    padding: 0;
}

body {
    color: $color-dark;
    line-height: 1;
}

ul, ol {
    list-style: none;
}

a {
    color: white;
    text-decoration: none;

    &:hover {
        text-decoration: underline;
    }

    &.button {
        text-decoration: none;
        border: 2px solid $color-light;
        background-color: $color-light;
        color: white;
        padding: 0.5em;
        
        &:hover {
            border: 2px solid $color-medium;
            background-color: white;
            color: $color-medium;
        }

        &:focus {
            outline: none;
        }

        &.button--inverted {
            border: 2px solid $color-light;
            border-right: 0;
            background-color: white;
            color: $color-light;

            &:hover {
                background-color: $color-dark;
                color: white;
                border-color: $color-dark;
            }
        }
    }
}

.hidden {
    display: none !important;
}

.dialog-embed {
    color: white;
    line-height: 1.5;
    margin: 1em;

    h4, p {
        margin-top: 1em;
    }

    a {
        color: white;
    }
}

#controls {
    margin-top: 2em;
}

#header {
    background-color: $color-light;
    color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;

    > h1,
    > div {
        padding: 10px 20px;
    }

    > div {
        display: flex;
        flex-direction: column;
        align-items: flex-end;
    }
}

#footer {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    text-align: center;
    font-size: small;

    background-color: $color-dark;
    color: white;

    padding: 0.3em;

    a {
        color: white;
        text-decoration: none;

        &:hover {
            text-decoration: underline;
        }
    }

}

#modals-wrapper {
    z-index: 1;
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;

    background-color: $color-modal-background;

    .dialog {
        z-index: 2;
        background-color: $color-medium;
        color: white;
        position: absolute;

        top: 3em;
        right: 3em;
        left: 3em;
        bottom: 3em;

        display: flex;
        flex-direction: column;

        hr {
            color: white;
        }

        .dialog-title {
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            align-items: center;

            h2 {
                margin: 0.35em;
                flex-shrink: 0;
            }

            h2:first-child {
                flex-shrink: unset;
                overflow: hidden;
                text-overflow: ellipsis;
            }

        }

        .dialog-content {
            flex-grow: 1;
            font-size: large;

            p {
                margin: 0.5em;
            }

            iframe {
                border: none;
                width: 100%;
                height: 100%
            }
        }

        &#settings {
            .dialog-content {
                table {
                    margin: 1em auto;

                    th {
                        text-decoration: underline;
                    }

                    th, td {
                        text-align: left;
                        padding: 0.5em;
                    }
    
                }
            }
        }

        &#imprint {
            .dialog-content {
                display: flex;
                flex-direction: column;
                align-items: center;
                justify-content: center;
            }
        }
    }
}

#main-wrapper {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: -1;

    #main {
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        #horizontal-wrapper {
            width: 100%;
            display: flex;
            flex-direction: row;
            justify-content: center;
            align-items: center;
            
            > div {
                flex-grow: 1;
                margin: 1em;
            }
        }
    }
}


.button {
    cursor: pointer;
}

#name-buttons {
    display: flex;
    flex-direction: column;
    align-items: center;

    .note-button {
        margin: 0.25rem;
        border: 2px black solid;

        border-radius: 100%;
        width: 2rem;
        height: 2rem;

        text-align: center;
        line-height: 2rem;

        background-color: $color-inactive;

        &.active {
            background-color: $color-active;
        }

        &:hover {
            background-color: $color-inactive-hover;
        }

        &.active:hover {
            background-color: $color-active-hover;
        }
    }
}

#notes {
    > div {
        display: grid;
        height: 5rem;
        grid-template-columns: 
            1fr 1fr 1fr;
        grid-template-rows: 
            1fr 1fr 1fr 1fr
            1fr 1fr 1fr 1fr 
            1fr 1fr 1fr 1fr;

        > div {
            font-size: 0;
            grid-column: 1 / 4;

            &#notes-line-1 {
                grid-row: 1 / 3;
            }

            &#notes-line-2 {
                grid-row: 3 / 5;
            }

            &#notes-line-3 {
                grid-row: 5 / 7;
            }

            &#notes-line-4 {
                grid-row: 7 / 9;
            }

            &#notes-line-5 {
                grid-row: 9 / 11;
            }

            &#notes-line-help {
                grid-row: 11 / 13;
                grid-column: 2 / 3;
            }
        }

        > .notes-line {
            border-bottom: 2px solid black;
        }
    }
}

#keyboard {
    /* maintain aspect ratio */
    position: relative;
    padding-bottom: 25%;

    > ul {
         /* stretch ul to keyboard div */
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;

        display: grid;
        grid-template-rows: repeat(2, 1fr);
        grid-template-columns: repeat(45, 1fr);
        
        > li {
            font-size: 0;
            grid-row: 1 / 3;
            border: 2px solid $color-dark;
            grid-column-end: span 3;

            &.keys-white {
                border-width: 2px 1px;
                background-color: white;
                z-index: 10;
            }

            &.keys-black {
                grid-row: 1 / 2;
                background-color: $color-dark;
                z-index: 100;
                grid-column-end: span 2;
            }

            &#key-c {
                border-left-width: 2px;
                grid-column-start: 1;
            }

            &#key-d {
                grid-column-start: 4;
            }

            &#key-e {
                grid-column-start: 7;
            }

            &#key-f {
                grid-column-start: 10;
            }

            &#key-g {
                grid-column-start: 13;
            }

            &#key-a {
                grid-column-start: 16;
            }

            &#key-b {
                grid-column-start: 19;
            }

            &#key-c1 {
                grid-column-start: 22;
            }

            &#key-d1 {
                grid-column-start: 25;
            }

            &#key-e1 {
                grid-column-start: 28;
            }

            &#key-f1 {
                grid-column-start: 31;
            }

            &#key-g1 {
                grid-column-start: 34;
            }

            &#key-a1 {
                grid-column-start: 37;
            }

            &#key-b1 {
                grid-column-start: 40;
            }

            &#key-c2 {
                border-right-width: 2px;
                grid-column-start: 43;
            }

            &#key-cis {
                grid-column-start:  3;
            }

            &#key-dis {
                grid-column-start:  6;
            }

            &#key-fis {
                grid-column-start: 12;
            }

            &#key-gis {
                grid-column-start:  15;
            }

            &#key-ais {
                grid-column-start: 18;
            }

            &#key-cis1 {
                grid-column-start:  24;
            }

            &#key-dis1 {
                grid-column-start:  27;
            }

            &#key-fis1 {
                grid-column-start: 33;
            }

            &#key-gis1 {
                grid-column-start:  36;
            }

            &#key-ais1 {
                grid-column-start: 39;
            }

            &.active {
                background-color: $color-light;

                &:hover {
                    background-color: $color-medium;
                }
            }

            &:hover {
                background-color: $color-medium;
            }
        }
    }
}

#chords-puzzle {
    > table {
        font-size: large;
        margin: 1em auto;

        td {
            padding: 0.25em;
            text-align: center;
        }
    }
}

#controls {
    text-align: center;
}

